hello_flask/sg.tf
resource "aws_security_group" "hello_sg" {
  name        = "hello_sg"
  description = "Rules for Hello Flask host access"
  vpc_id      = "${aws_vpc.main.id}"

  # SSH access from Public IPs and this SG
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "hello_sg"
  }
}
